--- a/package.json
+++ b/package.json
@@ -8,6 +8,17 @@
   },
   "author": "Shunyang Li",
   "license": "MIT",
+  "dependencies":{
+	"body-parser": "^1.16.0",
+    "cookie-parser": "^1.4.3",
+  	"express": "^4.14.0",
+  	"ejs": "~2.5.6",
+    "morgan": "^1.7.0",
+    "nodemon": "^1.11.0",
+    "serve-favicon": "^2.3.2",
+  	"vue": "^2.1.10",
+  	"vue-router": "^2.2.0"
+  },
   "devDependencies": {
     "babel-core": "^6.22.1",
     "babel-loader": "^6.2.10",
@@ -15,8 +26,6 @@
     "babel-preset-es2015": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-runtime": "^6.22.0",
-    "body-parser": "^1.16.0",
-    "cookie-parser": "^1.4.3",
     "css-loader": "^0.26.1",
     "eslint": "^3.14.1",
     "eslint-config-standard": "^6.2.1",
@@ -25,18 +34,11 @@
     "eslint-plugin-html": "^2.0.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^2.0.1",
-    "express": "^4.14.0",
     "file-loader": "^0.9.0",
-    "ejs": "~2.5.6",
-    "morgan": "^1.7.0",
-    "nodemon": "^1.11.0",
-    "serve-favicon": "^2.3.2",
     "url-loader": "^0.5.7",
-    "vue": "^2.1.10",
     "vue-hot-reload-api": "^2.0.8",
     "vue-html-loader": "^1.2.3",
     "vue-loader": "^10.1.0",
-    "vue-router": "^2.2.0",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.10",
     "webpack": "^1.14.0",
