--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
   },
   "author": "Shunyang Li",
   "license": "MIT",
-  "dependencies":{
-	"body-parser": "^1.16.0",
+  "dependencies": {
+    "body-parser": "^1.16.0",
     "cookie-parser": "^1.4.3",
-  	"express": "^4.14.0",
-  	"ejs": "~2.5.6",
+    "ejs": "~2.5.6",
+    "element-ui": "^1.4.4",
+    "express": "^4.14.0",
     "morgan": "^1.7.0",
     "nodemon": "^1.11.0",
     "serve-favicon": "^2.3.2",
-  	"vue": "^2.1.10",
-  	"vue-router": "^2.2.0"
+    "vue": "^2.1.10",
+    "vue-router": "^2.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.22.1",
